out
g++ -std=gnu++17 -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c symbol_table.cpp
symbol_table.cpp: In function ‘void gen_table(astree*)’:
symbol_table.cpp:1418:7: error: ‘table_ptrs’ was not declared in this scope; did you mean ‘symtable::table_ptrs’?
 1418 |       table_ptrs = new all_tables(struct_t,global,master);
      |       ^~~~~~~~~~
      |       symtable::table_ptrs
symbol_table.cpp:19:33: note: ‘symtable::table_ptrs’ declared here
   19 | namespace symtable{ all_tables *table_ptrs; }
      |                                 ^~~~~~~~~~
symbol_table.cpp: In function ‘void free_symbol()’:
symbol_table.cpp:1472:10: error: ‘table_ptrs’ was not declared in this scope; did you mean ‘symtable::table_ptrs’?
 1472 |   delete table_ptrs;
      |          ^~~~~~~~~~
      |          symtable::table_ptrs
symbol_table.cpp:19:33: note: ‘symtable::table_ptrs’ declared here
   19 | namespace symtable{ all_tables *table_ptrs; }
      |                                 ^~~~~~~~~~
symbol_table.cpp: In function ‘all_tables* get_tables()’:
symbol_table.cpp:1483:10: error: ‘table_ptrs’ was not declared in this scope; did you mean ‘symtable::table_ptrs’?
 1483 |   return table_ptrs;
      |          ^~~~~~~~~~
      |          symtable::table_ptrs
symbol_table.cpp:19:33: note: ‘symtable::table_ptrs’ declared here
   19 | namespace symtable{ all_tables *table_ptrs; }
      |                                 ^~~~~~~~~~
make: *** [Makefile:55: symbol_table.o] Error 1
